objects/ssot__ResearchStudyProtocolDefinition__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ContentText__c</fullName>
        <label>Content</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentType__c</fullName>
        <label>Content Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Research Study Protocol Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchStudyId__c</fullName>
        <label>Research Study</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1733408339173_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResearchStudyProtocolDefinition_Rese_rel</label>
        <referenceTo>ssot__ResearchStudy__dlm</referenceTo>
        <relationshipLabel>ResearchStudyProtocolDefinition_Rese_rel</relationshipLabel>
        <relationshipName>rel_1733408339173_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>